# dbdconf

./: .gitignore  CMakeLists.txt  autocompletion
alterator-module/: CMakeLists.txt
alterator-module/include/: module.h
alterator-module/src/: module.c  src.cmake
include/: cli.h
libdbdconf/: CMakeLists.txt
libdbdconf/inc/libdbdconf/: gvdb.h  utils.h
libdbdconf/src/: gvdb.c  private_gvdb_common.h  private_gvdb_export.h  private_gvdb_parse.h  src.cmake  utils.c
libdbdconf/test/: test.cmake
libdbdconf/test/auto/: auto.cmake  db_dump.c  db_path.c  dbd_read_write_read.c  dump_list_read.c  make_test_data.c  readwrite_test.c  test_on_test_data.c
libdbdconf/test/data/: test_data1.gvdb  test_data1_byteswap.gvdb  test_data2_byteswap.gvdb  test_data3.gvdb  test_data3_byteswap.gvdb  test_data4.gvdb
libsvdb/: CMakeLists.txt
libsvdb/cmake/: svdb-config.cmake  svdb.pc.in
libsvdb/inc/: svdb.h
libsvdb/include/: svdb.h
libsvdb/src/: private_svdb_common.c  private_svdb_export.c  private_svdb_parse.c  src.cmake  svdb.c  utils.c
libsvdb/test/: test.cmake
libsvdb/test/auto/: auto.cmake  db_dump.c  dbd_read_write_read.c  dump_list_read.c
libsvdb/test/data/: test_data2.gvdb  test_data4_byteswap.gvdb
src/: cli.c  main.c
